--- a/src/app/dashboard/Dashboard.module.scss
+++ b/src/app/dashboard/Dashboard.module.scss
@@ -11,6 +11,7 @@
   .welcome {
     font-size: 2rem;
     font-weight: 700;
+    color: #000;
   }
 }
 
