--- a/src/components/Input.module.scss
+++ b/src/components/Input.module.scss
@@ -18,6 +18,7 @@
     font-size: 1rem;
     text-align: left;
     direction: ltr;
+    color: #000000; 
 
     &::placeholder {
       color: #9ca3af; // gray-400
