--- a/src/components/UserCard.module.scss
+++ b/src/components/UserCard.module.scss
@@ -51,7 +51,7 @@
     }
 
     &.nameRow {
-      color: inherit;
+      color: #000;
       font-size: 1.55rem;
       font-weight: 700;
       svg {
